attempt to fix image height beign distorted in some custom styles

--- a/app/assets/stylesheets/blocks/b-db_entry.sass
+++ b/app/assets/stylesheets/blocks/b-db_entry.sass
@@ -67,6 +67,7 @@
       cursor: zoom-in
 
     img
+      height: auto
       max-width: 100%
 
     .c-poster
